<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/name_text"
            style="@style/NameStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/name"
            android:textAlignment="center" />

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:contentDescription="@string/yellow_star"
            android:visibility="visible"
            app:srcCompat="@android:drawable/btn_star_big_on" />

        <Button
            android:id="@+id/doneButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/buttonText" />

        <EditText
            android:id="@+id/nickname_input"
            style="@style/NameStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/nickname_hint"
            android:inputType="textPersonName" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="TextView"
            android:visibility="gone"
            style="@style/NameStyle"
            />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:id="@+id/bio"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:visibility="visible">

                <ImageView
                    android:id="@+id/imageView2"
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:contentDescription="@string/yellow_star"
                    tools:srcCompat="@android:anim/anticipate_overshoot_interpolator" />

                <TextView
                    android:id="@+id/textView"
                    style="@style/NameStyle"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:lineSpacingMultiplier="@dimen/linespace"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp"
                    android:text="@string/scrolltext" />
            </LinearLayout>
        </ScrollView>
    </LinearLayout>
</layout>